#add_subdirectory(access_indirect)
#add_subdirectory(access_conditional)
add_subdirectory(pointwise)
#add_subdirectory(pointwise_inplace)
#add_subdirectory(pairwise)
#add_subdirectory(reduction)
#add_subdirectory(comprehension)
#add_subdirectory(compute_trancendental)
#add_subdirectory(compute_sqrt)
#add_subdirectory(compute_zero)

