# datamining
add_subdirectory(correlation)
add_subdirectory(covariance)

# linear-algebra/blas
add_subdirectory(gemm)
add_subdirectory(gemver)
add_subdirectory(gesummv)
add_subdirectory(symm)
add_subdirectory(syr2k)
add_subdirectory(syr)
add_subdirectory(trmm)

# linear-algebra/kernels
add_subdirectory(2mm)

add_subdirectory(atax)
